--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>GrapesJS Plugin Boilerplate</title>
+    <title>GrapesJS Plugin Section</title>
     <link href="https://unpkg.com/grapesjs/dist/css/grapes.min.css" rel="stylesheet">
     <script src="https://unpkg.com/grapesjs"></script>
-    <script src="dist/grapesjs-plugin-boilerplate.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="dist/grapesjs-shape-divider.min.js"></script>
     <style>
       body,
       html {
@@ -32,10 +33,12 @@
         storageManager: { autoload: 0 },
         container: '#gjs',
         fromElement: true,
-
-        plugins: ['grapesjs-plugin-boilerplate'],
+        canvas: {
+          scripts: ['https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js']
+        },
+        plugins: ['grapesjs-shape-divider'],
         pluginsOpts: {
-          'grapesjs-plugin-boilerplate': { some: 'value' }
+          'grapesjs-shape-divider': { some: 'value' }
         }
       });
       window.editor = editor;
