--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         storageManager: { autoload: 0 },
         container: '#gjs',
         fromElement: true,
+        styleManager: { clearProperties: true },
         plugins: ['grapesjs-shape-divider'],
         pluginsOpts: {
           'grapesjs-shape-divider': { some: 'value' }
